--- a/userChrome.css
+++ b/userChrome.css
@@ -96,14 +96,14 @@
 	margin-top: 2px !important;
 }
 
-#unified-extensions-button {
-	width: 0.1px;
-	padding-inline: 0 !important
-}
-
-#unified-extensions-button>.toolbarbutton-icon {
-	width: 0 !important;
-}
+/* #unified-extensions-button { */
+/* 	width: 0.1px; */
+/* 	padding-inline: 0 !important */
+/* } */
+/**/
+/* #unified-extensions-button>.toolbarbutton-icon { */
+/* 	width: 0 !important; */
+/* } */
 
 #private-browsing-indicator-with-label {
 	margin-right: 10px;
